2016-04-24  Kubo Takehiro  <kubo@jiubao.org>
	* NEWS: Add changes between 2.2.1 and 2.2.2.
	* lib/oci8/version.rb: update to 2.2.2.

2016-04-24  Kubo Takehiro  <kubo@jiubao.org>
	* docs/report-installation-issue.md: Use RbConfig::CONFIG instead of
	   deprecated Config::CONFIG.

2016-04-24  Kubo Takehiro  <kubo@jiubao.org>
	* lib/oci8/oci8.rb: Add OCI8::in_cond and OCI8:InCondBindHelper.
	* test/test_all.rb, test/test_bind_array.rb: Add test of OCI8::in_cond.
	* README.md, docs/bind-array-to-in_cond.md: Add document of OCI8::in_cond.

2016-04-10  Kubo Takehiro  <kubo@jiubao.org>
	* lib/oci8/connection_pool.rb: update document.

2016-03-27  Kubo Takehiro  <kubo@jiubao.org>
	* lib/oci8/object.rb: Suppress warning: instance variable
	    @name_to_tdo not initialized.

2016-03-27  Kubo Takehiro  <kubo@jiubao.org>
	* ext/oci8/apiwrap.yml, ext/oci8/metadata.c, ext/oci8/object.c,
	  ext/oci8/oci8.h, lib/oci8/object.rb, test/setup_test_object.sql,
	  test/test_object.rb: Check object type from each object instance
	    when an Oracle object is got from a bind parameter.
	    (github issue #119)

2016-03-27  Kubo Takehiro  <kubo@jiubao.org>
	* lib/ruby-oci8.rb: Added for 'Bundler.require'.
	    (github issue #114)
	* dist-files: Add lib/ruby-oci8.rb.

2016-03-27  Kubo Takehiro  <kubo@jiubao.org>
	* README.md, docs/timeout-parameters.md, lib/oci8/oci8.rb:
	    Update documents about timeout parameters.

2016-03-18  Kubo Takehiro  <kubo@jiubao.org>
	* ext/oci8/oraconf.rb: Fix for mswin64.

2016-03-15  Kubo Takehiro  <kubo@jiubao.org>
	* docs/conflicts-local-connections-and-processes.md: Add a document
	    about conflicts between local connections and child process
	    handling on Unix.
	* README.md: Add a link to a newly added file.

2016-03-13  Kubo Takehiro  <kubo@jiubao.org>
	* ruby-oci8.gemspec: Change the license name in gemspec to suppress the
	   following warning.
	     WARNING: license value '2-clause BSD-style license' is invalid.